Redimensionada Logo; Configurado para uso de data source JNDI definido no Tomcat

--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -10,9 +10,9 @@
     <head>
         <meta http-equiv="Content-Type"
               content="text/html; charset=UTF-8" />
-        <link rel="shortcut icon"
+      <!--   <link rel="shortcut icon"
               type="image/x-icon"
-              href="img/logo.jpg" />
+              href="img/logo.jpg" /> -->
     </head>
     <body>
         <a4j:status layout="block"
